# hse-cpp-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/cars/: Car.hpp  CarManager.hpp  CargoCar.hpp  PassengerCar.hpp
src/core/: Constants.h  Exceptions.h  Game.h  TickSystem.cpp  TickSystem.h  Types.h
src/graph/: GraphAnalyzer.h  Pathfinder.h  RoadGraph.h
tests/: CMakeLists.txt  test_pathfinder.cpp
